# tarea-python-aws-restart-morris-opazo

./: .gitignore  README.md  pyproject.toml  run.bat  run.ps1  run.sh
docs/: ADDING_EXERCISES.md
src/aws_restart_lab/: __init__.py  app.py  config.py  main.py
src/aws_restart_lab/core/: __init__.py  assets.py  context.py  exercise.py  registry.py  router.py  state.py
src/aws_restart_lab/exercises/: __init__.py  catalog.py
src/aws_restart_lab/exercises/_complex_template/: README.md
src/aws_restart_lab/exercises/exercise_01/: __init__.py  manifest.py  view.py
src/aws_restart_lab/exercises/exercise_02/: __init__.py  manifest.py  view.py
src/aws_restart_lab/exercises/exercise_03/: __init__.py  manifest.py  view.py
src/aws_restart_lab/exercises/exercise_04/: __init__.py  manifest.py  view.py
src/aws_restart_lab/exercises/exercise_05/: __init__.py  manifest.py  view.py
src/aws_restart_lab/exercises/exercise_06/: __init__.py  manifest.py  view.py
src/aws_restart_lab/exercises/exercise_07/: __init__.py  manifest.py  requirements.txt
src/aws_restart_lab/exercises/exercise_07/src/: asset_loader.py  entities.py  input_handler.py  level_generator.py
src/aws_restart_lab/exercises/exercise_08/: __init__.py  manifest.py  view.py
src/aws_restart_lab/exercises/exercise_10/: main.py  manifest.py
src/aws_restart_lab/exercises/exercise_10/src/: __init__.py  app.py  config.py  game_state.py  renderer.py
src/aws_restart_lab/ui/screens/: base.py  exercise_host.py  exercise_selector.py  welcome.py
